ipc/ipdl/test/ipdl/ok/PmultiManager1.ipdl
include protocol PmultiManaged;

protocol PmultiManager1 {
    manages PmultiManaged;

child:
    async PmultiManaged();
};
