ipc/ipdl/test/ipdl/error/AsyncCtorReturns.ipdl
//error: asynchronous ctor/dtor message `AsyncCtorReturnsManageeConstructor' declares return values

include protocol AsyncCtorReturnsManagee;

protocol AsyncCtorReturns {
  manages AsyncCtorReturnsManagee;

child:
  async AsyncCtorReturnsManagee() returns (bool unused);
};
